--- a/sentimentIt.Rcheck/sentimentIt/html/00Index.html
+++ b/sentimentIt.Rcheck/sentimentIt/html/00Index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>R: SentimentIt Text Analysis</title>
+<head><title>R: Crowdsourced Pairwise Sentiment Text Analysis</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
-<h1> SentimentIt Text Analysis
+<h1> Crowdsourced Pairwise Sentiment Text Analysis
 <img class="toplogo" src="../../../doc/html/logo.jpg" alt="[R logo]" />
 </h1>
 <hr/>
